# ML-homework

./: .gitignore
01-intro/: homework.ipynb
02-regression/: homework.ipynb
03-classification/: homework.ipynb
04-evaluation/: homework-2024.ipynb  homework-2025.ipynb
05-deployment/2024/: Dockerfile  Pipfile  homework-2024.ipynb  predict.py
05-deployment/2025/: Dockerfile  homework.ipynb  predict.py  pyproject.toml
06-trees/: homework-2024.ipynb  homework-2025.ipynb
08-deep-learning/: homework-2024.ipynb  homework-2025.ipynb
09-serverless/: Dockerfile  app.py  homework.ipynb  pyproject.toml
10-kubernetes/: deployment.yaml  homework.ipynb  service.yaml
